--- a/UI/apps/web/src/locale/messages.es.xlf
+++ b/UI/apps/web/src/locale/messages.es.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-  <file source-language="es-CO" datatype="plaintext" original="ng2.template">
+  <file source-language="es" datatype="plaintext" original="ng2.template">
     <body>
       <trans-unit id="5726015335467913420" datatype="html">
         <source>Análisis de tiendas</source>
@@ -84,7 +84,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">apps/web/src/app/fabricantes/registrar-fabricante/registrar-fabricante.component.html</context>
-          <context context-type="linenumber">37,39</context>
+          <context context-type="linenumber">37,38</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">apps/web/src/app/planes-venta/registrar-planes-ventas/registrar-planes-venta.component.html</context>
@@ -96,7 +96,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">apps/web/src/app/productos/registrar-productos/registrar-productos.component.html</context>
-          <context context-type="linenumber">90,93</context>
+          <context context-type="linenumber">90,91</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">apps/web/src/app/vendedores/registrar-vendedores/registrar-vendedores.component.html</context>
